[package]
name = "rvu"
version = "0.1.0"
edition = "2021"
authors = ["Amit Sarangi"]
description = "this is an image viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.2"
thiserror = "1.0.32"
clap = {version = "3.1.10", features=["derive"]}
image = "0.24.3"
